docs/apache-airflow-providers-amazon/8.24.0/_sources/_api/airflow/providers/amazon/aws/operators/sqs/index.rst.txt
:py:mod:`airflow.providers.amazon.aws.operators.sqs`
====================================================

.. py:module:: airflow.providers.amazon.aws.operators.sqs

.. autoapi-nested-parse::

   Publish message to SQS queue.



Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.amazon.aws.operators.sqs.SqsPublishOperator




.. py:class:: SqsPublishOperator(*, sqs_queue, message_content, message_attributes = None, delay_seconds = 0, message_group_id = None, **kwargs)


   Bases: :py:obj:`airflow.providers.amazon.aws.operators.base_aws.AwsBaseOperator`\ [\ :py:obj:`airflow.providers.amazon.aws.hooks.sqs.SqsHook`\ ]

   Publish a message to an Amazon SQS queue.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:SqsPublishOperator`

   :param sqs_queue: The SQS queue url (templated)
   :param message_content: The message content (templated)
   :param message_attributes: additional attributes for the message (default: None)
       For details of the attributes parameter see :py:meth:`botocore.client.SQS.send_message`
   :param delay_seconds: message delay (templated) (default: 1 second)
   :param message_group_id: This parameter applies only to FIFO (first-in-first-out) queues. (default: None)
       For details of the attributes parameter see :py:meth:`botocore.client.SQS.send_message`
   :param aws_conn_id: The Airflow connection used for AWS credentials.
       If this is ``None`` or empty then the default boto3 behaviour is used. If
       running Airflow in a distributed manner and aws_conn_id is None or
       empty, then default boto3 configuration would be used (and must be
       maintained on each worker node).
   :param region_name: AWS region_name. If not specified then the default boto3 behaviour is used.
   :param verify: Whether or not to verify SSL certificates. See:
       https://boto3.amazonaws.com/v1/documentation/api/latest/reference/core/session.html
   :param botocore_config: Configuration dictionary (key-values) for botocore client. See:
       https://botocore.amazonaws.com/v1/documentation/api/latest/reference/config.html

   .. py:attribute:: aws_hook_class

      

   .. py:attribute:: template_fields
      :type: Sequence[str]

      

   .. py:attribute:: template_fields_renderers

      

   .. py:attribute:: ui_color
      :value: '#6ad3fa'

      

   .. py:method:: execute(context)

      Publish the message to the Amazon SQS queue.

      :param context: the context object
      :return: dict with information about the message sent
          For details of the returned dict see :py:meth:`botocore.client.SQS.send_message`



